<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/default_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/quest_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/quests_list"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/info_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_info" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/current_quest_container"
        android:visibility="gone">

        <LinearLayout
            android:id="@+id/give_up_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/small_margin"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/current_quest_title"
                android:textSize="16sp" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/give_up_quest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/give_up_quest"
                android:textColor="@color/colorGiveUpQuest"
                android:textSize="16sp" />
        </LinearLayout>

        <include layout="@layout/quest_preview"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_marginBottom="@dimen/small_margin">
        <TextView
            android:id="@+id/available_quests_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp" />
    </LinearLayout>

    <ListView
        android:id="@+id/quests_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/transparent"
        android:dividerHeight="@dimen/default_margin"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@+id/info_button" />


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>