<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:title="@string/bottom_menu_1"
        android:icon="@drawable/ic_bottom_quests"
        android:id="@+id/bottom_navigation_quests"/>

    <item
        android:title="@string/bottom_menu_2"
        android:icon="@drawable/ic_bottom_map"
        android:id="@+id/bottom_navigation_map"
        />

    <item
        android:title="@string/bottom_menu_3"
        android:icon="@drawable/ic_bottom_profile"
        android:id="@+id/bottom_navigation_profile"
        />

</menu>