<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/default_margin"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"

        android:orientation="horizontal">

        <TextView
            android:id="@+id/profile_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/exit_button"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="?android:selectableItemBackgroundBorderless"
            android:src="@drawable/ic_exit" />
    </LinearLayout>

<!--    <TextView-->
<!--        android:id="@+id/name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="@dimen/small_margin"-->
<!--        android:text="Антон Филатов"-->
<!--        android:textSize="16sp" />-->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/walked_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/default_margin"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/quests_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/default_margin"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/spent_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/default_margin"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/points_discovered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/default_margin"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/completed_quests_title"
        android:layout_marginTop="@dimen/default_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completed_quests"
        android:textColor="@color/black"
        android:textSize="@dimen/title_text_size"
        android:textStyle="bold" />

    <ListView
        android:id="@+id/quests_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin"
        android:divider="@color/transparent"
        android:dividerHeight="@dimen/default_margin"
        android:layout_marginBottom="40dp"
        app:layout_constraintTop_toBottomOf="@+id/info_button" />
</LinearLayout>